[gd_scene load_steps=7 format=3 uid="uid://bsx1usq366uih"]

[ext_resource type="Script" uid="uid://dcdowglvd2oyi" path="res://src/ui/player_ui.gd" id="1_2wqvo"]
[ext_resource type="Texture2D" uid="uid://ogyonerhuxqq" path="res://assets/crosshair.png" id="2_xntci"]
[ext_resource type="Texture2D" uid="uid://5kxw7b5ombpr" path="res://assets/hotbar.png" id="3_olmyv"]
[ext_resource type="Texture2D" uid="uid://vocvmjj7kt4g" path="res://assets/hotbar_selection.png" id="4_iik2x"]
[ext_resource type="Script" uid="uid://lblaiw3aanud" path="res://src/ui/options_menu.gd" id="5_xl7ia"]
[ext_resource type="Script" uid="uid://cnld5vsyaf5i6" path="res://src/ui/style/appliers/buttons_applier.gd" id="6_08fqo"]

[node name="PlayerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2wqvo")

[node name="Hotbar" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundRect" type="TextureRect" parent="Hotbar"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -364.0
offset_top = -88.0
offset_right = 364.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_olmyv")

[node name="SelectionRect" type="TextureRect" parent="Hotbar"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -44.0
offset_top = -88.0
offset_right = 44.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_iik2x")

[node name="PreviewsContainer" type="Control" parent="Hotbar"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -364.0
offset_top = -88.0
offset_right = 364.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="OptionsMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_xl7ia")

[node name="BackgroundColor" type="ColorRect" parent="OptionsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="Buttons" type="HFlowContainer" parent="OptionsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.0
offset_top = -33.0
offset_right = 71.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_08fqo")

[node name="ResumeButton" type="Button" parent="OptionsMenu/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Resume"

[node name="QuitButton" type="Button" parent="OptionsMenu/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Quit"

[node name="Crosshair" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_xntci")

[node name="RightSideUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="RightSideUI"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_right = 15

[node name="Label" type="Label" parent="RightSideUI/MarginContainer"]
layout_mode = 2
text = "Player Scale: 1.0"

[connection signal="pressed" from="OptionsMenu/Buttons/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="OptionsMenu/Buttons/QuitButton" to="." method="_on_quit_button_pressed"]
